# ai-invention-0b8201-typed-failure-recovery-in-neuro-symbolic

./: README.md
paper_latex/: references.bib
paper_latex/workspace/: .terminal_claude_agent_struct_out.json  paper.aux  paper.bbl  paper.blg  paper.out  paper.tex
round-1/dataset-1/demo/: data_code_demo.ipynb
round-2/experiment-1/: README.md
round-2/experiment-1/demo/: method_code_demo.ipynb  mini_demo_data.json
round-2/experiment-1/src/: .terminal_claude_agent_struct_out.json  config.yaml  full_method_out.json  method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
round-2/experiment-1/src/outputs/: bridge_axiom_cache.json
round-2/experiment-1/src/src/: clutrr_parser.py  forward_chainer.py  llm_client.py  pipeline.py  proofwriter_parser.py  repair_engine.py  sentbert_sim.py
round-2/research-1/: README.md
round-2/research-1/src/: .terminal_claude_agent_struct_out.json  RESEARCH_SUMMARY.md  research_out.json  research_report.md
