[project]
name = "typed-failure-recovery"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "loguru==0.7.3",
    "requests==2.34.2",
    "sentence-transformers==5.5.1",
    "numpy==2.4.6",
    "torch==2.12.0",
    "transformers==5.12.0",
    "tokenizers==0.22.2",
    "scikit-learn==1.9.0",
    "scipy==1.17.1",
    "huggingface_hub==1.19.0",
    "tqdm==4.68.2",
    "PyYAML==6.0.3",
    "safetensors==0.8.0",
    "filelock==3.29.0",
    "packaging==26.2",
    "regex==2026.5.9",
    "joblib==1.5.3",
    "threadpoolctl==3.6.0",
    "certifi==2026.5.20",
    "charset-normalizer==3.4.7",
    "urllib3==2.7.0",
    "idna==3.18",
]
